# simdiatokens-server

./: .dockerignore  Cargo.toml  Dockerfile
src/: main.rs
