[package]
name = "simdiatokens_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
rand = "=0.8.5"
rand_core = "=0.6.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"